# pytorch-lightning-cookiecutter

./: LICENSE  Makefile  README.md  cookiecutter.json
{{ cookiecutter.folder_name }}/: .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
{{ cookiecutter.folder_name }}/src/{{ cookiecutter.package_name }}/: cli.py
{{ cookiecutter.folder_name }}/src/{{ cookiecutter.package_name }}/data/: datamodule.py  dataset.py
{{ cookiecutter.folder_name }}/src/{{ cookiecutter.package_name }}/models/: lightning.py
{{ cookiecutter.folder_name }}/src/{{ cookiecutter.package_name }}/train/: trainer.py
{{ cookiecutter.folder_name }}/tests/: test.py
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/: cli.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/models/: torch.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/train/: trainer.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/utils/: utilities.py
