[metadata]
name = {{ cookiecutter.project_name }}
version = 0.0.1
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    torch == {{ cookiecutter.pytorch_version }}
    pytorch-lightning >= 2
    tensorboard
    typer[all]
    einops
    python-dotenv
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    mypy
    pre-commit
    ruff        
    pytest
visualize =
    matplotlib
    streamlit
    altair
    plotly

[options.entry_points]
console_scripts =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}.cli:app

[mypy]
ignore_missing_imports = True
